fixed width issues on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,6 @@ h3 {
     padding: 4rem 0.5rem 7rem 0.5rem;
     margin: 0 auto;
     overflow: scroll;
-    width: 70vw;
+    width: 98vw
   }
 }
