--- a/src/pages/MyWork/WorkPage.module.css
+++ b/src/pages/MyWork/WorkPage.module.css
@@ -25,6 +25,6 @@
     padding: 4rem .5rem 7rem .5rem;
     margin: 0 auto;
     overflow: scroll;
-    width: 95vw
+    width: 98vw
   }
 }
